<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context="com.campusconnection.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:id="@+id/signUpDataLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/signupFirstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_first_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/signupLastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_last_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/signupPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/signupLocationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:drawableEnd="@drawable/ic_my_location"
                    android:drawableRight="@drawable/ic_my_location"
                    android:ems="10"
                    android:hint="@string/prompt_location"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <EditText
                    android:id="@+id/signupSchoolInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_school"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/signupMajorInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_major"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/signupBirthdayInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.5"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/prompt_birthday"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <RadioGroup
                    android:id="@+id/signupGenderRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/signupMaleRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:alpha="0.5"
                        android:buttonTint="@color/white"
                        android:text="@string/prompt_gender_male"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/signupFemaleRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:buttonTint="@color/white"
                        android:text="@string/prompt_gender_female"
                        android:textColor="@color/white" />
                </RadioGroup>

                <Button
                    android:id="@+id/signupNextButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corners"
                    android:text="@string/label_next"
                    android:textColor="@color/white" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/addPhotosLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/selectPhotos"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_add_photos"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

                <View
                    android:id="@+id/photosBackgroundWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_below="@id/selectPhotos"
                    android:background="@drawable/signup_photos_background"
                    android:alpha="0.5"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:id="@+id/addPhotosContainer"
                    android:layout_below="@id/selectPhotos"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"/>

                <Button
                    android:id="@+id/signupSubmitBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounded_corners"
                    android:text="@string/label_sign_up"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/photosBackgroundWrapper"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>

