<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context="com.campusconnection.SignUpPathActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/signUpPathAppText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/signUpPathAppStatement"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_statement"
            android:textColor="@color/white"
            android:layout_below="@+id/signUpPathAppText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/signupFacebookButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/signUpPathAppStatement"
            android:layout_marginTop="112dp"
            android:text="@string/action_signup_with_facebook"
            android:alpha="0.5"/>

        <Button
            android:id="@+id/signupEmailButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/action_signup_with_email"
            android:alpha="0.5"
            android:layout_below="@+id/signupFacebookButton"
            android:layout_marginTop="30dp" />



    </RelativeLayout>

</RelativeLayout>
